--- a/material-react-app/package.json
+++ b/material-react-app/package.json
@@ -65,6 +65,5 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.5.1"
   },
-  "homepage": "https://material-dashboard-react-nodejs.creative-tim.com/",
-  "proxy": "https://node-json-api-free.creative-tim.com/"
+  "homepage": "https://material-dashboard-react-nodejs.creative-tim.com/"
 }
