--- a/node-api/package.json
+++ b/node-api/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "json-server": "^0.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "mysql": "^2.18.1",
